--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -33,5 +33,6 @@ $split-right: 66.67%;
 // --- Z-index ---
 $z-header: 100;
 $z-menu: 90;
-$z-lightbox: 200;
+$z-yellow-window: 120;
 $z-preview: 150;
+$z-lightbox: 200;
